tests/semantic/rel_stratification/rel_stratification.err
Error: Unable to stratify relation(s) {a}
Relation a in file rel_stratification.dl at line 4
.decl a(n:name) output
^----------------------
has cyclic negation in file rel_stratification.dl at line 17
a(X) :- a(X), !a(X).
---------------^-----
Error: Unable to stratify relation(s) {b,c}
Relation b in file rel_stratification.dl at line 5
.decl b(n:name) output
^----------------------
has cyclic negation in file rel_stratification.dl at line 13
c(X) :- a(X), !b(X).
---------------^-----
2 errors generated, evaluation aborted
